# aqua

./: PLAN.md  README.md
backend/: pyproject.toml
backend/app/api/: __init__.py  meals.py
backend/app/models/: __init__.py  meal.py
backend/app/schemas/: __init__.py  meal.py
backend/app/services/: __init__.py  meal.py
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/components/ui/: Card.tsx  FormField.tsx  Input.tsx  PrimaryButton.tsx  Select.tsx  StatusMessage.tsx
frontend/src/layout/: AppLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: HomePage.tsx  ProfilePage.tsx  RecommendPage.tsx  RecordPage.tsx
frontend/src/stores/: mealStore.ts  profileStore.ts
frontend/src/types/: meal.ts  profile.ts
